feat(apps): add admin, models
regroupement app_1 et app_2 sous apps/
interface admin
models dans app_1 et app_2
tests pour views et models dans app_1 et app_2

--- a/projet/pytest.ini
+++ b/projet/pytest.ini
@@ -3,4 +3,4 @@ DJANGO_SETTINGS_MODULE = projet.settings
 
 python_files = test_*.py
 
-addopts = -vv --cov=apps/app_1/tests/ --cov=app_2/tests/ --no-cov-on-fail -p no:warnings
+addopts = -vv --cov=apps/app_1/tests/ --cov=apps/app_2/tests/ --no-cov-on-fail -p no:warnings
